# icewm

./: CMakeLists.txt  Makefile.am  configure.ac  icewm.spec.in  icewm_logout  icewm_reboot  icewm_restart  icewm_shutdown  icewm_startup
.gear/: merge  rules
.gear/tags/: list
altlinux/: icewm-githubmod.spec  icewm-old-changelog  icewm.desktop  icewm.menu  icewm.menu-method  icewm.wmsession  icewm_logout  icewm_reboot  icewm_restart  icewm_shutdown  icewm_startup  icex.spec
lib/: CMakeLists.txt  Makefile.am  icewm.desktop
lib/themes/Infadel2/: default.theme
lib/themes/default/: default.theme
lib/themes/warp3/: default.theme
lib/themes/yellowmotif/: default.theme
src/: CMakeLists.txt  appnames.h  default.h  fdomenu.cc  icewmbg_prefs.h  themable.h  wmapp.cc  yprefs.h
