
xsessiondir = $(datadir)/xsessions

dist_xsession_DATA = \
	icewm.desktop

nodist_pkgdata_DATA = \
	keys \
	menu \
	toolbar \
	programs \
	winoptions

nobase_dist_pkgdata_DATA = \
	icons/app_16x16.xpm \
	icons/app_32x32.xpm \
	icons/bomb_16x16.xpm \
	icons/bomb_32x32.xpm \
	icons/communicator-abook_16x16.xpm \
	icons/communicator-abook_32x32.xpm \
	icons/communicator-browser_16x16.xpm \
	icons/communicator-browser_32x32.xpm \
	icons/communicator-composer_16x16.xpm \
	icons/communicator-composer_32x32.xpm \
	icons/communicator-discussion_16x16.xpm \
	icons/communicator-discussion_32x32.xpm \
	icons/communicator-mail_16x16.xpm \
	icons/communicator-mail_32x32.xpm \
	icons/emacs_16x16.xpm \
	icons/emacs_32x32.xpm \
	icons/file_16x16.xpm \
	icons/file_32x32.xpm \
	icons/folder_16x16.xpm \
	icons/folder_32x32.xpm \
	icons/fte_16x16.xpm \
	icons/fte_32x32.xpm \
	icons/gimp_16x16.xpm \
	icons/gimp_32x32.xpm \
	icons/gnome_16x16.xpm \
	icons/java_16x16.xpm \
	icons/java_32x32.xpm \
	icons/kde_16x16.xpm \
	icons/koules_16x16.xpm \
	icons/koules_32x32.xpm \
	icons/lock_16x16.xpm \
	icons/lock_32x32.xpm \
	icons/lock_48x48.xpm \
	icons/navigator_16x16.xpm \
	icons/navigator_32x32.xpm \
	icons/netscape_16x16.xpm \
	icons/netscape_32x32.xpm \
	icons/pdf_16x16.xpm \
	icons/pdf_32x32.xpm \
	icons/vim_16x16.xpm \
	icons/vim_32x32.xpm \
	icons/vim_48x48.xpm \
	icons/xisp_16x16.xpm \
	icons/xisp_32x32.xpm \
	icons/xload_16x16.xpm \
	icons/xload_32x32.xpm \
	icons/xterm_16x16.xpm \
	icons/xterm_32x32.xpm \
	icons/xv_16x16.xpm \
	icons/xv_32x32.xpm \
	ledclock/a.xpm \
	ledclock/colon.xpm \
	ledclock/dot.xpm \
	ledclock/m.xpm \
	ledclock/n0.xpm \
	ledclock/n1.xpm \
	ledclock/n2.xpm \
	ledclock/n3.xpm \
	ledclock/n4.xpm \
	ledclock/n5.xpm \
	ledclock/n6.xpm \
	ledclock/n7.xpm \
	ledclock/n8.xpm \
	ledclock/n9.xpm \
	ledclock/percent.xpm \
	ledclock/p.xpm \
	ledclock/slash.xpm \
	ledclock/space.xpm \
	mailbox/errmail.xpm \
	mailbox/mail.xpm \
	mailbox/newmail.xpm \
	mailbox/nomail.xpm \
	mailbox/unreadmail.xpm \
	taskbar/collapse.xpm \
	taskbar/debian.xpm \
	taskbar/desktop.xpm \
	taskbar/expand.xpm \
	taskbar/icewm.xpm \
	taskbar/linux1.xpm \
	taskbar/linux20.xpm \
	taskbar/linux2.xpm \
	taskbar/linux.xpm \
	taskbar/start.xpm \
	taskbar/windows.xpm \
	taskbar/xfreeos2.xpm \
	themes/default/closeA.xpm \
	themes/default/closeI.xpm \
	themes/default/default.theme \
	themes/default/depthA.xpm \
	themes/default/depthI.xpm \
	themes/default/hideA.xpm \
	themes/default/hideI.xpm \
	themes/default/maximizeA.xpm \
	themes/default/maximizeI.xpm \
	themes/default/menuButtonA.xpm \
	themes/default/menuButtonI.xpm \
	themes/default/minimizeA.xpm \
	themes/default/minimizeI.xpm \
	themes/default/restoreA.xpm \
	themes/default/restoreI.xpm \
	themes/default/rolldownA.xpm \
	themes/default/rolldownI.xpm \
	themes/default/rollupA.xpm \
	themes/default/rollupI.xpm \
	themes/default/default.png \
	logout_d\readme \
	shutdown_d\readme \
	reboot_d\readme \
	restart_d\readme \
	startup_d\readme
